# DRAGON-AI

./: README.md  pyproject.toml
src/dragon_ai/: crew.py  main.py
src/dragon_ai/config/: agents.yaml  tasks.yaml
